tests/errors/float-backend.ari
fn main() -> i64 {
  let value: f64 = 3.5;
  return 0;
}
